--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="column right about-img" style="padding: 20px; border-radius: 10px;">
                     <div class="text">I know about <span class="typing-2"></span></div>
                     <p>     Aspiring software engineer with a passion for computing and technology, driven to solve problems and develop user-focused solutions. Always eager to take on opportunities to expand my knowledge and skill set.</p>
-                    <a href="File/Eric_Boadu_[Resume.].pdf" target="_blank" class="about-img">My Resume</a>
+                    <a href="File/EricBoadu_resume.pdf" target="_blank" class="about-img">My Resume</a>
                 </div>
             </div>
         </div>
@@ -193,3 +193,4 @@
     </footer>
 </body>
 </html>
+
